--- a/css/style.css
+++ b/css/style.css
@@ -75,6 +75,34 @@ html, body {
     height: 100%;
 }
 
+#practice-keys .dur-settings-grid {
+    display: grid;
+    grid-auto-flow: column;
+    grid-template-rows: 1fr;
+    grid-gap: 5px;
+    justify-items: center;
+    align-items: center;
+    font-weight: 700;
+    font-size: 1.5rem;
+    height: 100px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+#practice-keys .dur-settings-grid > [data-dur] {
+    display: grid;
+    grid-auto-flow: row;
+    grid-template-rows: 1fr;
+    grid-gap: 5px;
+    justify-items: center;
+    align-items: center;
+    background-color: #111111;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+}
+
 #practice-keys .current-grid {
     display: grid;
     grid-auto-flow: row;
@@ -318,6 +346,37 @@ html, body {
     height: 100%;
     padding: 0 2px 0 0;
     text-align: left;
+}
+
+#practice-keys > .dur-settings-grid div[data-dur] > img {
+    opacity: .4;
+}
+
+#practice-keys > .dur-settings-grid div[data-dur].active > img {
+    opacity: 1;
+}
+
+#practice-keys .dur-settings-grid img {
+    filter: invert(1);
+}
+
+#practice-keys > .dur-settings-grid .submenu {
+    display: grid;
+    grid-auto-flow: row;
+    align-items: center;
+    justify-items: center;
+    grid-gap: 4px;
+    font-size: 1rem;
+    width: 100%;
+    height: 100%;
+}
+#practice-keys > .dur-settings-grid .submenu > div {
+    display: grid;
+    align-items: center;
+    justify-items: center;
+    background-color: #111111;
+    width: 100%;
+    height: 100%;
 }
 
 
